# LangChain

./: .env  1RAG_Pipeline_Loader.ipynb  2RAG_Pipeline_Splitter.ipynb  3RAG_Pipeline_Embeddings.ipynb  Untitled.ipynb  example1.ipynb  example2-1.ipynb  example2-2.ipynb  example2-3.ipynb  example2-4.ipynb  example3-1.ipynb  example4-1_Pipeline_Loader_Ollama.ipynb  example5-1.ipynb  example5-2.ipynb  example6-1.ipynb  example7-1.ipynb  gpt_llm연동.ipynb  groq_llm연동.ipynb  pyproject.toml  test.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/: 음식_recommendations.csv
